tests/compile-fail/null_pointer_deref_zst.rs
fn main() {
    let x: () = unsafe { *std::ptr::null() }; //~ ERROR invalid use of NULL pointer
    panic!("this should never print: {:?}", x);
}
